SettingsFragment.kt has been updated to androidx